--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="ParentUp - Supporto per Genitori nel Post-Parto e Adozione" />
     <meta property="og:description" content="Risorse, consigli e strumenti per affrontare con serenità il post-parto e il percorso di adozione." />
     <meta property="og:image" content="https://raw.githubusercontent.com/KateB-creator/ParentUp/refs/heads/main/frontend/public/assets/img-condivisione.webp" />
-    <meta property="og:url" content="https://parentup.it" />
+    <meta property="og:url" content="https://parentup.netlify.app/" />
     <meta property="og:type" content="website" />
   
     <!-- Favicon -->
